# optimizations

./: CMakeLists.txt
.github/workflows/: test-devirt.yml  test-fragmentation.yml  test-inlining.yml  test-loopunrolling.yml  test-sso.yml  test_algebra.yml  test_register_pointer.yml
algebraic_reductions_vectorization/: CMakeLists.txt  README.md  code.cpp
devirtualization/: CMakeLists.txt  README.md  code.cpp
fragmentation_cache_efficiency/: CMakeLists.txt  README.md  code.cpp
inlining/: INLINING.md  analyze_inlining.py  code.cpp  default_inline  default_results.csv  force_inline  force_results.csv  inline  no_inline  noinline_results.csv
loop_unrolling/: CMakeLists.txt  README.md  code.cpp  copy_scalar  loop_unrolling  plot.py  results.csv
register_vs_pointer/: CMakeLists.txt  README.md  code.cpp
short_string_optimization/: CMakeLists.txt  README.md  code.cpp
